[package]
name = "collector-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
arrow-array = "56.1"
arrow-schema = "56.1"
chrono = { version = "0.4", features = ["clock"] }
dotenvy = "0.15"
futures-util = "0.3"
parquet = { version = "56.1", features = ["arrow", "snap"] }
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
